# Copyright (C) 2017-2023 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

January, 30, 2023, AnnotSV version 3.2.3
	- "Samples_ID" field is now always reported in the output (default, sample = NA)
	- Add the creation of a VCF output file from a "BED" SV input file. The "-vcf" and "-svtBEDcol" options are required.
	- Add bugfix concerning Mouse annotation

January, 06, 2023, AnnotSV version 3.2.2
	- Add bugfix concerning the use of variantconvert to create the VCF output file (GRCh37/GRCh38, configfiles)

December, 21, 2022, AnnotSV version 3.2.1
	- Add bugfix concerning the partial overlap with some specific dbVar SV (same start and end locations)

December 13, 2022, AnnotSV version 3.2
	- Add of a new output format: VCF
	- Add partial overlap annotation:
		- Add 4 benign gain SV annotation: po_B_gain_allG_source, po_B_gain_allG_coord, po_B_gain_someG_source, po_B_gain_someG_coord
		- Add 4 benign loss SV annotation: po_B_loss_allG_source, po_B_loss_allG_coord, po_B_loss_someG_source, po_B_loss_someG_coord
		- Add 5 pathogenic gain SV annotation: po_P_gain_phen, po_P_gain_hpo, po_P_gain_source, po_P_gain_coord, po_P_gain_percent
		- Add 5 pathogenic loss SV annotation: po_P_loss_phen, po_P_loss_hpo, po_P_loss_source, po_P_loss_coord, po_P_loss_percen
	- Add the 2B, 2G and 4O criteria (Loss) in the SV ranking
	- Add the 2B, 2C, 2F, 2G and 4O criteria (Gain) in the SV ranking
	- Update of the "make uninstall"

September 12, 2022, AnnotSV version 3.1.3
	- Human annotation update
	- Use of the new ClinGen data source format ("OMIM ID" no longer reported)
	- Removing of the DDG2P gene annotations (to avoid redundancy with GenCC)
	- Documentation update 
